--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     </a>
 
     <!-- 文字简介 -->
-    <div class="username">Mister Kay</div>
-    <div class="desc">前端开发 移动端开发 新媒体运营</div>
+    <div class="username">saintifly</div>
+    <div class="desc">图像处理 软件开发 工程管理</div>
 
     <!-- 外部链接 -->
     <div class="social">
-        <a title="主页" href="https://github.com/fifteen718" target="_blank">
+        <a title="主页" href="https://github.com/saintifly" target="_blank">
             <span class="iconfont icon-home"></span>
         </a>
-        <a title="博客" href="http://blog.csdn.net/fifteen718" target="_blank">
+        <a title="博客" href="http://www.baidu.com" target="_blank">
             <span class="iconfont icon-blog"></span>
         </a>
-        <a title="微博" href="http://weibo.com/yekaikai" target="_blank">
+        <a title="微博" href="http://www.qq.com" target="_blank">
             <span class="iconfont icon-weibo"></span>
         </a>
         <a title="摄影" href="html/photo.html" target="_blank">
