--- a/html/photo.html
+++ b/html/photo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>摄影</title>
+    <title>图片</title>
 
     <style type="text/css">
         * {
