--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello Kay !</title>
+    <title>Welcome saintifly Page!</title>
     <link href="favicon.ico" mce_href="favicon.ico" rel="bookmark" type="image/x-icon" /> 
 	<link href="favicon.ico" mce_href="favicon.ico" rel="icon" type="image/x-icon" /> 
 	<link href="favicon.ico" mce_href="favicon.ico" rel="shortcut icon" type="image/x-icon" />  
