--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <a title="微博" href="http://www.qq.com" target="_blank">
             <span class="iconfont icon-weibo"></span>
         </a>
-       <!--  <a title="摄影" href="html/photo.html" target="_blank">
-            <span class="iconfont icon-photo"></span> -->
+        <a title="图片" href="html/photo.html" target="_blank">
+            <span class="iconfont icon-photo"></span> 
         </a>
     </div>
 </div>
