--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- 添加背景音乐 -->
 <div class="musicDiv">
-       <audio id="music" src="http://sc1.111ttt.com/2016/1/12/10/205100120121.mp3" autoplay="autoplay" loop="loop"></audio>
+       <audio id="music" src="leegof.mp3" autoplay="autoplay" loop="loop"></audio>
 </div>
 
 <!-- 正文 -->
