--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- 添加背景音乐 -->
 <div class="musicDiv">
-       <audio id="music" src="leegof.mp3" autoplay="autoplay" loop="loop"></audio>
+       <audio id="music" src="media/leegof.mp3" preload="auto" loop="loop"></audio> <!-- 不自动播放：autoplay="autoplay" -->
 </div>
 
 <!-- 正文 -->
