--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <span class="iconfont icon-photo"></span> 
         </a>
     </div>
+	    <div id="nav-panel-title">
+        <div  id="nav-panel-title-weather">
+			<iframe width="620" scrolling="no" height="65" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>
+        </div>
+    </div>
+	
 </div>
 </body>
 </html>
