--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
         <a title="图片" href="html/photo.html" target="_blank">
             <span class="iconfont icon-photo"></span> 
         </a>
-	</div>		
-</div>
-</div class="weather">
+	</div>
+	<div class="blank"></div>
+	</div class="weather">
 	<iframe width="320" scrolling="no" height="70" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>
+	</div>
 </div>
+
 </body>
 </html>
