--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </a>
 		<div class="blank"><br/><br/></div>
 		</div class="weather">
-		<iframe width="320" scrolling="no" height="75" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>
+		document.write(<iframe width="320" scrolling="no" height="75" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>)
 		</div>
 	</div>
 	
