--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
         <a title="图片" href="html/photo.html" target="_blank">
             <span class="iconfont icon-photo"></span> 
         </a>
-		<div class="blank"><br/><br/></div>
+		<div class="blank"><br/><br/><br/></div>
 		</div class="weather">
-		document.write(<iframe width="320" scrolling="no" height="75" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>)
+			<script type="text/javascript">
+			document.write(<iframe width="320" scrolling="no" height="75" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>)
+			</script>
 		</div>
 	</div>
 	
