--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
             <span class="iconfont icon-photo"></span> 
         </a>
 		<div class="blank"><br/><br/></div>
-		<span>
-			<script type="text/javascript">
-			document.write(<iframe width="320" scrolling="no" height="75" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>)
-			</script>
-		</span>
+		</div class="weather">
+		<iframe width="320" scrolling="no" height="75" frameborder="0" allowtransparency="true" src="https://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>
+		</div>
 	</div>
 	
 </div>
