--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </a>
 		<div class="blank"><br/><br/><br/></div>
 		</div class="weather">
-		<iframe width="500" scrolling="yes" height="75" frameborder="0" allowtransparency="true" src="https://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"></iframe>
+		<iframe width="500" scrolling="yes" height="75" frameborder="0" allowtransparency="true" <script src="http://i.tianqi.com/index.php?c=code&id=11&icon=1&site=12"</script>></iframe>
 		</div>
 	</div>
 	
