--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <a title="图片" href="html/photo.html" target="_blank">
             <span class="iconfont icon-photo"></span> 
         </a>
-		<div class="blank"><br/><br/><br/></div>
+		<div class="blank"><br/><br/><br/><br/><br/><br/></div>
 		</div class="weather">
-		<iframe width="400" scrolling="yes" height="50" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=41&icon=1&site=12"></iframe>
+		<iframe width="380" scrolling="yes" height="50" frameborder="0" allowtransparency="true" src="http://i.tianqi.com/index.php?c=code&id=41&icon=1&site=12"></iframe>
 		</div>
 	</div>
 	
