--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- 文字简介 -->
     <div class="username">saintifly</div>
-    <div class="desc">不畏前程，不要放弃技术的热爱</div>
+    <div class="desc">不畏前程，不放弃技术!</div>
 
     <!-- 外部链接 -->
     <div class="social">
