map to my another web
map to my another web

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a title="博客" href="http://www.baidu.com" target="_blank">
             <span class="iconfont icon-blog"></span>
         </a>
-        <a title="微博" href="http://www.qq.com" target="_blank">
+        <a title="微博" href="https://saintifly.github.io/zxh.github.io/" target="_blank">
             <span class="iconfont icon-weibo"></span>
         </a>
         <a title="图片" href="html/photo.html" target="_blank">
